make training true

--- a/DiffPure/configs/guided_diffusion_config.yml
+++ b/DiffPure/configs/guided_diffusion_config.yml
@@ -32,7 +32,7 @@ config:
     num_channels: 3
     random_flip: true
     uniform_dequantization: false
-  device: cpu
+  device: cuda
   image_size: 64
   model:
     attention_type: ddpm
