--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,361 @@
 torchvision==0.14.1
 torchattacks==3.3.0
+absl-py==0.12.0
+accelerate==0.17.1
+aiohttp==3.8.3
+aiosignal==1.3.1
+alembic==1.9.2
+anndata==0.8.0
+ansiwrap==0.8.4
+antlr4-python3-runtime==4.8
+anyio==3.4.0
+apache-beam==2.34.0
+appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==21.2.0
+autopep8==1.6.0
+avro-python3==1.9.2.1
+Babel==2.9.1
+backcall==0.2.0
+beautifulsoup4==4.11.1
+black==21.4b2
+bleach==4.1.0
+boltons==23.0.0
+boto3==1.26.37
+botocore==1.29.37
+bounded-pool-executor==0.0.3
+cachetools==4.2.1
+catboost==1.1.1
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+click==8.0.3
+clip @ git+https://github.com/openai/CLIP.git@d50d76daa670286dd6cacf3bcd80b5e4823fc8e1
+cloudpickle==2.0.0
+colorama==0.4.4
+contextlib2==21.6.0
+crcmod==1.7
+cvxpy==1.3.0
+cycler==0.11.0
+Cython==0.29.26
+dask==2022.12.1
+databricks-cli==0.17.4
+dataclasses==0.6
+datasets==2.8.0
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
+denoising-diffusion-pytorch==1.4.4
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git@6999554d5a02e0c9c7a22c1abd8f6eb6812fad0a
+dill==0.3.6
+distlib==0.3.6
+distributed==2022.12.1
+dm-tree==0.1.6
+docker==6.0.1
+docker-pycreds==0.4.0
+docopt==0.6.2
+drain3==0.9.11
+eagerpy==0.30.0
+easyocr==1.4.1
+ecos==2.0.12
+einops==0.6.0
+elementpath==3.0.2
+eli5==0.13.0
+ema-pytorch==0.2.1
+entrypoints==0.3
+et-xmlfile==1.1.0
+fastavro==1.4.7
+fastjsonschema==2.16.2
+filelock==3.7.1
+fire==0.4.0
+Flask==2.0.2
+flatbuffers==2.0
+fonttools==4.28.5
+foolbox==3.3.3
+frozenlist==1.3.3
+fsspec==2022.11.0
+ftfy==6.1.1
+future==0.18.2
+fuzzywuzzy==0.18.0
+fvcore==0.1.5.post20220119
+gast==0.4.0
+gin-config==0.5.0
+gitdb==4.0.10
+GitPython==3.1.30
+google-api-core==2.3.2
+google-api-python-client==2.33.0
+google-auth==2.3.3
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+google-cloud-vision==2.6.3
+google-pasta==0.2.0
+googleapis-common-protos==1.54.0
+graphviz==0.20.1
+greenlet==2.0.2
+grpcio==1.43.0
+grpcio-status==1.43.0
+gunicorn==20.1.0
+h5py==3.6.0
+hdfs==2.6.0
+HeapDict==1.0.1
+httplib2==0.19.1
+huggingface-hub==0.11.1
+hydra-core==1.1.1
+hyperopt==0.2.7
+idna==3.3
+imageio==2.9.0
+imagesize==1.3.0
+imantics==0.1.12
+imgaug==0.4.0
+importlib-metadata==4.10.0
+imutils==0.5.4
+iopath==0.1.9
+ipykernel==6.6.0
+ipython==7.30.1
+ipython-genutils==0.2.0
+ipywidgets==7.7.1
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.2
+jmespath==1.0.1
+joblib==1.1.0
+json5==0.9.6
+jsonpickle==1.5.1
+jsonschema==4.3.2
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-server==1.23.4
+jupyter_client==7.4.8
+jupyter_core==5.1.0
+jupyterlab==3.5.2
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.1
+jupyterlab-widgets==1.1.1
+kaggle==1.5.12
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+labelImg==1.8.6
+labelme2coco==0.2.1
+liac-arff==2.5.0
+libclang==12.0.0
+lightgbm==2.2.3
+llvmlite==0.39.1
+lmdb==1.4.0
+locket==1.0.0
+loguru==0.6.0
+lvis==0.5.3
+lxml==4.7.1
+Mako==1.2.4
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matlab==0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+minio==7.1.12
+mistune==2.0.4
+mlflow==2.1.1
+msgpack==1.0.4
+multidict==6.0.3
+multiprocess==0.70.14
+mypy-extensions==0.4.3
+natsort==8.2.0
+nbclassic==0.3.4
+nbclient==0.5.9
+nbconvert==7.2.7
+nbformat==5.7.1
+nest-asyncio==1.5.4
+networkx==2.6.3
+ninja==1.11.1
+nltk==3.7
+notebook==6.4.6
+num2words==0.5.12
+numba==0.56.4
+numpy==1.21.3
+oauth2client==4.1.3
+oauthlib==3.1.1
+object-detection==0.1
+omegaconf==2.1.1
+openai==0.27.0
+opencv-contrib-python==4.5.5.62
+opencv-python-headless==4.5.4.60
+openml==0.13.0
+openpyxl==3.0.9
+openslide-python==1.2.0
+opt-einsum==3.3.0
+orjson==3.6.5
+osqp==0.6.2.post8
+packaging==21.3
+pandas==1.3.4
+pandas-stubs==1.2.0.35
+pandocfilters==1.5.0
+papermill==2.4.0
+parso==0.8.3
+partd==1.3.0
+pathml==2.1.0
+pathspec==0.9.0
+pathtools==0.1.2
+patsy==0.5.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
+pixellib==0.7.1
+platformdirs==2.6.0
+plotly==5.5.0
+portalocker==2.3.2
+pqdm==0.2.0
+prometheus-client==0.12.0
+promise==2.3
+prompt-toolkit==3.0.24
+proto-plus==1.19.8
+protobuf==3.19.1
+psutil==5.8.0
+ptyprocess==0.7.0
+py-cpuinfo==8.0.0
+py4j==0.10.9.7
+pyarrow==10.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.3
+pycodestyle==2.8.0
+pycparser==2.21
+pydicom==2.3.1
+pydot==1.4.2
+Pygments==2.10.0
+PyJWT==2.6.0
+pymongo==3.12.3
+pynndescent==0.5.8
+pyparsing==2.4.2
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyrsistent==0.18.0
+pytesseract==0.3.8
+python-bidi==0.4.2
+python-bioformats==4.0.7
+python-dateutil==2.8.2
+python-dotenv==0.19.2
+python-javabridge==4.0.3
+python-Levenshtein==0.12.2
+python-slugify==5.0.2
+pytorch-fid==0.3.0
+pytz==2021.3
+PyWavelets==1.2.0
+PyYAML==6.0
+pyzmq==24.0.1
+qdldl==0.1.5.post3
+qtconsole==5.4.0
+QtPy==2.3.0
+querystring-parser==1.2.4
+rarfile==4.0
+regex==2021.11.10
+requests==2.26.0
+requests-oauthlib==1.3.0
+responses==0.18.0
+revChatGPT==0.0.14
+rsa==4.8
+s3transfer==0.6.0
+sacrebleu==2.0.0
+sahi==0.8.22
+scanpy==1.9.1
+scikit-image==0.19.1
+scikit-learn==1.0.1
+scipy==1.7.3
+scs==3.2.2
+seaborn==0.11.2
+Send2Trash==1.8.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.96
+sentry-sdk==1.15.0
+seqeval==1.2.2
+session-info==1.0.0
+setproctitle==1.3.2
+shap==0.41.0
+Shapely==1.8.0
+six==1.16.0
+sklearn==0.0.post1
+slicer==0.0.7
+smmap==5.0.0
+sniffio==1.2.0
+sns==0.1
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.46
+sqlparse==0.4.3
+statsmodels==0.13.5
+stdlib-list==0.8.0
+tabpfn==0.1.8
+tabulate==0.8.9
+tblib==1.7.0
+tenacity==8.0.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.7.0
+tensorflow-addons==0.15.0
+tensorflow-datasets==4.4.0
+tensorflow-estimator==2.7.0
+tensorflow-hub==0.12.0
+tensorflow-io==0.23.1
+tensorflow-io-gcs-filesystem==0.23.1
+tensorflow-metadata==1.5.0
+tensorflow-model-optimization==0.7.0
+tensorflow-text==2.7.3
+termcolor==1.1.0
+terminado==0.12.1
+terminaltables==3.1.10
+testpath==0.5.0
+text-unidecode==1.3
+textwrap3==0.9.2
+tf-models-official==2.7.0
+tf-slim==1.1.0
+threadpoolctl==3.0.0
+tifffile==2021.11.2
+timm==0.6.12
+tinycss2==1.2.1
+tk==0.1.0
+tokenizers==0.12.1
+toml==0.10.2
+tomli==2.0.0
+toolz==0.12.0
+torch==1.13.1
+torch-scatter==2.1.0
+torchattacks==3.3.0
+torchdiffeq==0.2.3
+torchsde==0.2.5
+torchsummary==1.5.1
+torchvision==0.14.1
+tornado==6.2
+tqdm==4.62.3
+traitlets==5.8.0
+trampoline==0.1.2
+transformers==4.25.1
+tueplots==0.0.6
+typeguard==2.13.3
+typing-extensions==3.10.0.2
+uci-dataset==0.0.7
+umap-learn==0.5.3
+uritemplate==4.1.1
+urllib3==1.26.14
+virtualenv==20.19.0
+wandb==0.13.10
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.3
+Werkzeug==2.0.2
+widgetsnbextension==3.6.1
+wrapt==1.13.3
+xgboost==1.5.0
+xlrd==2.0.1
+xmljson==0.2.1
+xmltodict==0.13.0
+xvfbwrapper==0.2.9
+xxhash==3.1.0
+yacs==0.1.8
+yarl==1.8.2
+zict==2.2.0
+zipp==3.6.0
