--- a/.gitignore
+++ b/.gitignore
@@ -114,10 +114,10 @@ venv.bak/
 .spyderproject
 .spyproject
 
-figures/
-*.png
-*.txt
-*.csv
+# figures/
+# *.png
+# *.txt
+# *.csv
 
 # Rope project settings
 .ropeproject
